	* src/winio.c (statusbar): Update the screen immediately whenever a
	message has been posted on the status bar.
	* src/winio.c (statusbar), src/nano.c (do_input): Turn the cursor off
	when writing in the status bar, and on when waiting for	input.
	* src/prompt.c (update_the_statusbar): Chop two parameters that are
	always the same, and that are global variables anyway.

2016-02-05  Benno Schulenberg  <bensberg@justemail.net>
	* doc/texinfo/nano.texi: Condense the descriptions of command-key
	sequences and of the screen layout, mention how to enter Unicode,
	and mention that regular expressions are line oriented.
	* src/global.c (shortcut_init): Put four strings in standard order.
	* src/text.c (do_undo), src/global.c (shortcut_init): Guide the
	translators a little bit.

2016-01-31  Benno Schulenberg  <bensberg@justemail.net>
	* src/files.c (has_valid_path): Be more specific in how a given path
	is invalid.  The change was improved by Rishabh Dave.
	* doc/syntax/nanorc.nanorc: Show ^^ and M-^ as valid key names.
	* src/prompt.c (do_statusbar_home): Make Home go always fully home.

2016-01-29  Benno Schulenberg  <bensberg@justemail.net>
	* src/files.c (do_insertfile): Do display the buffer when configured
	with only --disable-histories.  This fixes Savannah bug #47011.
	* src/nano.c (main): Check position history only when 'positionlog'
	is set.  This fixes a bug unconsciously reported by Mike Frysinger.
	* src/files.c (do_lockfile): Plug a couple of memory leaks.
	* src/files.c (update_poshistory): Plug another memory leak.
	* src/files.c (close_buffer): Update position history only when
	the option 'positionlog' is set.

2016-01-26  Benno Schulenberg  <bensberg@justemail.net>
	* src/files.c (update_poshistory): Do not add directories to the
	list of file positions.  This fixes Savannah bug #46971.
	* src/*.c: Adjust some indentation and some line wrapping.
	* src/prompt.c (do_statusbar_prev_word): When in the middle of a